force-app/main/default/objects/ucinn_ascendv2__User_Configuration__c/ucinn_ascendv2__User_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Hierarchy level setting for Ascend</description>
    <label>User Configuration</label>
</CustomObject>