force-app/main/default/objects/ucinn_ascendv2__User_Configuration__c/fields/ucinn_ascendv2__DCO_Batch_Processing_Threshold__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__DCO_Batch_Processing_Threshold__c</fullName>
    <label>DCO Batch Processing Threshold (DEPR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>