force-app/main/default/objects/ucinn_ascendv2__User_Configuration__c/fields/ucinn_ascendv2__Expedited_Left_Width__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Expedited_Left_Width__c</fullName>
    <description>Default left width for the template.</description>
    <inlineHelpText>Default left width for the template.</inlineHelpText>
    <label>Expedited Left Width</label>
    <length>20</length>
    <type>Text</type>
</CustomField>