force-app/main/default/objects/ucinn_ascendv2__User_Configuration__c/fields/ucinn_ascendv2__Expedited_Right_Width__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Expedited_Right_Width__c</fullName>
    <description>Default right width for the template.</description>
    <inlineHelpText>Default right width for the template.</inlineHelpText>
    <label>Expedited Right Width</label>
    <length>20</length>
    <type>Text</type>
</CustomField>