force-app/main/default/objects/ucinn_ascendv2__User_Configuration__c/fields/ucinn_ascendv2__Expedited_Top_Height__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Expedited_Top_Height__c</fullName>
    <description>Defaulted height of the template.</description>
    <inlineHelpText>Defaulted height of the template.</inlineHelpText>
    <label>Expedited Top Height</label>
    <length>20</length>
    <type>Text</type>
</CustomField>