force-app/main/default/objects/ucinn_ascendv2__User_Configuration__c/fields/ucinn_ascendv2__Expedited_Transaction_Section_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Expedited_Transaction_Section_1__c</fullName>
    <description>Component for section 1 of the template.</description>
    <inlineHelpText>Component for section 1 of the template.</inlineHelpText>
    <label>Expedited Transaction Section 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>