force-app/main/default/objects/ucinn_ascendv2__User_Configuration__c/fields/ucinn_ascendv2__Expedited_Transaction_Section_3__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Expedited_Transaction_Section_3__c</fullName>
    <description>Component that goes in the 3rd section of the template.</description>
    <inlineHelpText>Component that goes in the 3rd section of the template.</inlineHelpText>
    <label>Expedited Transaction Section 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>