force-app/main/default/objects/ucinn_ascendv2__User_Configuration__c/fields/ucinn_ascendv2__Expedited_Transaction_Template__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Expedited_Transaction_Template__c</fullName>
    <description>Expedited Gift Processing template</description>
    <inlineHelpText>Expedited Gift Processing template</inlineHelpText>
    <label>Expedited Transaction Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>