force-app/main/default/objects/ucinn_ascendv2__User_Configuration__c/fields/ucinn_ascendv2__Giving_Filter_Defaults__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Giving_Filter_Defaults__c</fullName>
    <description>Default filter values for pledge main app</description>
    <label>Giving Filter Defaults</label>
    <type>TextArea</type>
</CustomField>