force-app/main/default/objects/ucinn_ascendv2__User_Configuration__c/fields/ucinn_ascendv2__Is_Debug_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Debug_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean option to control high level exception error or detail exception error that should be shown to users</description>
    <inlineHelpText>Check it if detail exception is needed for debugging.</inlineHelpText>
    <label>Is_Debug Enabled</label>
    <type>Checkbox</type>
</CustomField>