force-app/main/default/objects/ucinn_ascendv2__User_Configuration__c/fields/ucinn_ascendv2__Is_Giving_Details_Warning_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Giving_Details_Warning_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check to show giving details warning on the giving details list.</description>
    <inlineHelpText>Check to show giving details warning on the giving details list.</inlineHelpText>
    <label>Is Giving Details Warning Enabled</label>
    <type>Checkbox</type>
</CustomField>