force-app/main/default/objects/ucinn_ascendv2__User_Configuration__c/fields/ucinn_ascendv2__Is_Installments_Paying_Splits_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Installments_Paying_Splits_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Installments Paying Splits Enabled</label>
    <type>Checkbox</type>
</CustomField>