force-app/main/default/objects/ucinn_ascendv2__User_Configuration__c/fields/ucinn_ascendv2__Is_Installments_Top_Down_Paying_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Installments_Top_Down_Paying_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, pay installments in ascending order based on expected date. Otherwise, pay the earliest unpaid installment with remaining amount applied to installments in reverse order.</description>
    <label>Is Installments Top Down Paying Enabled</label>
    <type>Checkbox</type>
</CustomField>