force-app/main/default/objects/ucinn_ascendv2__User_Configuration__c/fields/ucinn_ascendv2__Is_Welcome_Mat_XGP_Disabled__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Welcome_Mat_XGP_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to disable welcome mat on expedited gift processing.</description>
    <inlineHelpText>Check to disable welcome mat on expedited gift processing.</inlineHelpText>
    <label>Is Welcome Mat XGP Disabled</label>
    <type>Checkbox</type>
</CustomField>